# image-annotation

./: .gitignore  build.sh  pyproject.toml  render.yaml
backend/: .env.example  README.md
backend/accounts/: serializers.py  urls.py  views.py
backend/annotations/: models.py  serializers.py  urls.py  views.py
backend/annotations/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/tasks/: models.py  serializers.py  urls.py  views.py
backend/tasks/migrations/: 0001_initial.py
