[project]
name = "image-annotation"
version = "0.1.0"
description = "AnnotateX — Django REST backend for the Kanban task manager and canvas image-annotation tool."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=4.2",
    "djangorestframework>=3.14",
    "djangorestframework-simplejwt>=5.3",
    "django-cors-headers>=4.3",
    "pillow>=10.0",
    "cloudinary>=1.40",
    "django-cloudinary-storage>=0.3.0",
    "dj-database-url>=2.1",
    "psycopg[binary]>=3.1",
    "gunicorn>=21.2",
    "whitenoise>=6.6",
    "python-dotenv>=1.0",
]
